cambio de los botones para los lugares

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -95,20 +95,238 @@
 
                 <div class="container-fluid">
                     <ul id="pathList">
-                        <li><button type="button" id="m2"><b>Entrada</b></button></li>
-                        <li><button type="button" id="m3"><b>Escalera Caldas</b></button></li>
-                        <li><button type="button" id="m4"><b>Baños Carrasquilla</b></button></li>
-                        <li><button type="button" id="m5"><b>Entrada Teatrino</b></button></li>
-                        <li><button type="button" id="m6"><b>Síndico</b></button></li>
-                        <li><button type="button" id="m7"><b>Aula Mutis</b></button></li>
-                        <li><button type="button" id="m8"><b>La bordadita</b></button></li>
-                        <li><button type="button" id="m9"><b>Cuenteros</b></button></li>
-                        <li><button type="button" id="m10"><b>Escaleras Casur</b></button></li>
-                        <li><button type="button" id="m11"><b>Comedor</b></button></li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m2">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Entrada</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m3">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Escalera Caldas</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m4">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Baños Carrasquilla</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m5">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Entrada Teatrino</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m6">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Síndico</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m7">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Aula Mutis</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m8">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Cuenteros</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m9">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Escaleras Casur</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="hexagon-item">
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <div class="hex-item">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <a href="#" class="hex-content" id="m10">
+                                    <span class="hex-content-inner">
+                                        <span class="icon">
+                                            <!-- Aquí va tu icono -->
+                                        </span>
+                                        <span class="title"><b>Comedor</b></span>
+                                    </span>
+                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+        
+                        <!-- Repite lo mismo para los demás botones hexagonales -->
+                        <!-- No olvides cambiar los ID de los botones según sea necesario -->
                     </ul>
                 </div>
             </div>
-            </div>
+        </div>
             <script src="items_script.js"></script>
 
 
