--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -16,6 +16,8 @@
     <!-- Librería Bootstrap para estilos en toda la página -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Libreria para el switch-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="style.css">
     <!-- Fuente de texto -->
