Implementación imágenes slide pt 1
Cambio de nombres de ficheros en el proyecto y cambio a la función de carga de imágenes del Slider en slider.js

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -421,38 +421,30 @@
         </div>
 
         <!-- Slides de patos -->
-        <div class="slide-slider">
-            <div class="slide-list">
-                <div class="slide-item">
-                    <img src="patoimg/Pato1.jpg" alt="">
+            <div class="slide-slider">
+                <div class="slide-list">
+                    <div class="slide-item">
+                        <img src="patoimg/Pato1.jpg" alt="">
+                    </div>
+                    <div class="slide-item">
+                        <img src="patoimg/Pato2.jpg" alt="">
+                    </div>
+                    <div class="slide-item">
+                        <img src="patoimg/patochiquito.jpg" alt="">
+                    </div>
                 </div>
-                <div class="slide-item">
-                    <img src="patoimg/Pato2.jpg" alt="">
+                <div class="slide-buttons">
+                    <button id="prev"><-</button>
+                    <button id="next">-></button>
                 </div>
-                <div class="slide-item">
-                    <img src="patoimg/patochiquito.jpg" alt="">
-                </div>
-                <div class="slide-item">
-                    <img src="patoimg/patopa.jpg" alt="">
-                </div>
-                <div class="slide-item">
-                    <img src="patoimg/Pato3.jpeg" alt="">
-                </div>
+                <ul class="slide-dots">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
-            <div class="slide-buttons">
-                <button id="prev"><- </button>
-                        <button id="next">-></button>
-            </div>
-            <ul class="slide-dots">
-                <li class="active"></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
 
-        <script src="patopato.js"></script>
+        <script src="slider.js"></script>
 
 
 
