--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -421,30 +421,38 @@
         </div>
 
         <!-- Slides de patos -->
-            <div class="slide-slider">
-                <div class="slide-list">
-                    <div class="slide-item">
-                        <img src="patoimg/Pato1.jpg" alt="">
-                    </div>
-                    <div class="slide-item">
-                        <img src="patoimg/Pato2.jpg" alt="">
-                    </div>
-                    <div class="slide-item">
-                        <img src="patoimg/patochiquito.jpg" alt="">
-                    </div>
+        <div class="slide-slider">
+            <div class="slide-list">
+                <div class="slide-item">
+                    <img src="patoimg/Pato1.jpg" alt="">
                 </div>
-                <div class="slide-buttons">
-                    <button id="prev"><-</button>
-                    <button id="next">-></button>
+                <div class="slide-item">
+                    <img src="patoimg/Pato2.jpg" alt="">
                 </div>
-                <ul class="slide-dots">
-                    <li class="active"></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <div class="slide-item">
+                    <img src="patoimg/patochiquito.jpg" alt="">
+                </div>
+                <div class="slide-item">
+                    <img src="patoimg/patopa.jpg" alt="">
+                </div>
+                <div class="slide-item">
+                    <img src="patoimg/Pato3.jpeg" alt="">
+                </div>
             </div>
+            <div class="slide-buttons">
+                <button id="prev"><- </button>
+                        <button id="next">-></button>
+            </div>
+            <ul class="slide-dots">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
 
-        <script src="slider.js"></script>
+        <script src="patopato.js"></script>
 
 
 
