--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -157,7 +157,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m2">
                             <span class="hex-content-inner">
-                                <span class="title" id="Entrada"><b>Entrada</b></span>
+                                <span class="title" id="Entrada" onclick="mostrarCarrusel('m2')"><b>Entrada</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -183,7 +183,7 @@
                         <a href="#" class="hex-content" id="m3">
                             <span class="hex-content-inner">
 
-                                <span class="title" id="EscaleraCaldas"><b>Escalera Caldas</b></span>
+                                <span class="title" id="EscaleraCaldas" onclick="mostrarCarrusel('m3')"><b>Escalera Caldas</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -208,7 +208,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m4">
                             <span class="hex-content-inner">
-                                <span class="title" id="BañosClaustroColonial"><b>Baños Claustro</b></span>
+                                <span class="title" id="BañosClaustroColonial" onclick="mostrarCarrusel('m4')"><b>Baños Claustro</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -233,7 +233,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m5">
                             <span class="hex-content-inner">
-                                <span class="title" id="EntradaTeatrino"><b>Entrada Teatrino</b></span>
+                                <span class="title" id="EntradaTeatrino" onclick="mostrarCarrusel('m5')"><b>Entrada Teatrino</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -258,7 +258,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m6">
                             <span class="hex-content-inner">
-                                <span class="title" id="Síndico"><b>Síndico</b></span>
+                                <span class="title" id="Síndico" onclick="mostrarCarrusel('m6')"><b>Síndico</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -283,7 +283,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m7">
                             <span class="hex-content-inner">
-                                <span class="title" id="AulaMutis"><b>Aula Mutis</b></span>
+                                <span class="title" id="AulaMutis" onclick="mostrarCarrusel('m7')"><b>Aula Mutis</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -308,7 +308,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m8">
                             <span class="hex-content-inner">
-                                <span class="title" id="LaBordadita"><b>La Bordadita</b></span>
+                                <span class="title" id="LaBordadita" onclick="mostrarCarrusel('m8')"><b>La Bordadita</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -334,7 +334,7 @@
                         <a href="#" class="hex-content" id="m9">
                             <span class="hex-content-inner">
 
-                                <span class="title" id="PlazaCuenteros"><b>Cuenteros</b></span>
+                                <span class="title" id="PlazaCuenteros" onclick="mostrarCarrusel('m9')"><b>Cuenteros</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -359,7 +359,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m10">
                             <span class="hex-content-inner">
-                                <span class="title" id="EscalerasCASUR"><b>Escaleras Casur</b></span>
+                                <span class="title" id="EscalerasCASUR" onclick="mostrarCarrusel('m10')"><b>Escaleras Casur</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
