Intento_de_algo

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -407,31 +407,23 @@
 
             <script src="Button_script.js"></script>
 
-
-
         </div>
         <!-- Rectángulo con la info momento -->
 
         <div class="rectangle">
-            <div class="recttitle" id="ComedorT">Comedor</div>
-            <div class="rectcontent" id="desc_Comedor">Juntando zonas de bienestar, estudio y esparcimiento, contrasta
-                su estilo como
-                parte del Claustro Republicano con la corriente moderna de la universidad.
-            </div>
+            <div class="descripcion-info"></div>
         </div>
 
-        <div class="carrusel-container">
-            <div class="slide-list">
+        <div class = "carrusel-container">
+            <div class = "slide-list">
                 <!-- Imágenes se agregarán aquí dinámicamente -->
             </div>
-            <a class="prev" onclick="moveSlide(-1)">&#10094;</a>
-            <a class="next" onclick="moveSlide(1)">&#10095;</a>
+            <a class = "prev" onclick="moveSlide(-1)">&#10094;</a>
+            <a class = "next" onclick="moveSlide(1)">&#10095;</a>
         </div>
 
 
     </main>
-
-    
 
 </body>
 
