arreglo del caudro de texto y el tactil

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -75,48 +75,7 @@
             </div>
         </section>
 
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                let traducciones = [];
-
-                // Cargar el archivo JSON
-                fetch('traducciones.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        traducciones = data;
-                        cambiarIdioma('es'); // Idioma por defecto
-                    });
-
-                function cambiarIdioma(idioma) {
-                    const idiomaMap = {
-                        'es': 'Español',
-                        'en': 'Inglés',
-                        'fr': 'Francés'
-                    };
-
-                    // Actualizar el texto de los elementos traducidos
-                    traducciones.forEach(item => {
-                        const element = document.getElementById(item.Clave);
-                        if (element) {
-                            element.textContent = item[idiomaMap[idioma]];
-                        }
-                    });
-
-                    // Actualizar el texto del botón
-                    const languageButton = document.getElementById('languageButton');
-                    languageButton.textContent = idioma.toUpperCase();
-                }
-
-                // Manejar el clic en los elementos del menú desplegable
-                document.querySelectorAll('.dropdown-item').forEach(item => {
-                    item.addEventListener('click', event => {
-                        event.preventDefault(); // Prevenir el comportamiento por defecto del enlace
-                        const lang = event.target.getAttribute('data-lang');
-                        cambiarIdioma(lang);
-                    });
-                });
-            });
-        </script>
+<!--AQUI VA EL COSO DE KEVIN EN CASO DE QUE NO FUNCIONE TENIENDOLO EN EL ARCHIVO ITEMS.JS-->
 
         <!-- fin traduccion -->
 
