--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -116,7 +116,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m2">
                             <span class="hex-content-inner">
-                                <span class="title" id="Entrada"><b>Entrada</b></span>
+                                <span class="title" id="Entrada"><b>Inicio</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -381,6 +381,12 @@
             <a class = "next" onclick="moveSlide(1)">&#10095;</a>
         </div>
 
+
+        <!-- Cargar por defecto la descripción inicial -->
+        <script>
+            mostrarCarrusel("m2");
+            mostrarDescripcion("m2");
+        </script>
 
     </main>
 
