Antes de la muerte

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -61,7 +61,7 @@
 
 
         <!-- Sección de cambio de idioma -->
-        <section>
+        <section id = "languageSection">
             <div class="dropdown-center">
                 <button id="languageButton" class="btn btn-secondary dropdown-toggle" type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
