--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -68,9 +68,9 @@
                     ES
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#" data-lang="en">EN</a></li>
-                    <li><a class="dropdown-item" href="#" data-lang="es">ES</a></li>
-                    <li><a class="dropdown-item" href="#" data-lang="fr">FR</a></li>
+                    <li><button class="dropdown-item" type="button" data-lang="en">EN</button></li>
+                    <li><button class="dropdown-item" type="button" data-lang="es">ES</button></li>
+                    <li><button class="dropdown-item" type="button" data-lang="fr">FR</button></li>
                 </ul>
             </div>
         </section>
