--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -61,21 +61,22 @@
 
 
         <!-- Sección de cambio de idioma -->
-        <section id = "languageSection">
+        <section>
             <div class="dropdown-center">
-                <button id="languageButton" class="btn btn-secondary dropdown-toggle" type="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
+                <button id="languageButton" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     ES
                 </button>
                 <ul class="dropdown-menu">
-                    <li><button class="dropdown-item" type="button" data-lang="en">EN</button></li>
-                    <li><button class="dropdown-item" type="button" data-lang="es">ES</button></li>
-                    <li><button class="dropdown-item" type="button" data-lang="fr">FR</button></li>
+                    <li><a class="dropdown-item" href="#" data-lang="en">EN</a></li>
+                    <li><a class="dropdown-item" href="#" data-lang="es">ES</a></li>
+                    <li><a class="dropdown-item" href="#" data-lang="fr">FR</a></li>
                 </ul>
             </div>
         </section>
+        
+        <script src="traduccion_alterna.js"></script> 
 
-<!--AQUI VA EL COSO DE KEVIN EN CASO DE QUE NO FUNCIONE TENIENDOLO EN EL ARCHIVO ITEMS.JS-->
+<!--AQUI VA EL COSO DE K EN CASO DE QUE NO FUNCIONE TENIENDOLO EN EL ARCHIVO ITEMS.JS-->
 
         <!-- fin traduccion -->
 
