--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -117,7 +117,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m2">
                             <span class="hex-content-inner">
-                                <span class="title" id="Entrada">Inicio</span>
+                                <span class="title" id="Entrada"><b>Inicio</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
